--- a/frontend.html
+++ b/frontend.html
@@ -38,11 +38,15 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/elementai/jobs/1919939'>Job Application for D?veloppeur(euse) front-end - AI Enablement | Front-End Developer - AI Enablement  at Element AI</a></h5> 
+<p><span class="badge badge-light">Montreal</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='http://cerebralgroup.applytojob.com/apply/Q3m8i5Ls3E/Front-End-Developer'>Front End Developer - Cerebral Staffing, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tsitrone.join.com/jobs/467489-frontend-web-entwickler-in-koeln-m-w'>Job @ tsitrone medien + Co. KG (K?ln): Frontend We... | JOIN</a></h5> 
+<h5><a href='https://tsitrone.join.com/jobs/467489-frontend-web-entwickler-in-koeln-m-w'>Job @ tsitrone medien + Co. KG (K?ln): Frontend We... | JOIN</a></h5> 
 <p><span class="badge badge-light">K?ln, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -64,7 +68,7 @@
 <p><span class="badge badge-light">Mumbai Chennai, India</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/impala/jobs/4497685002'>Job Application for Senior Frontend Engineer at Impala</a></h5> 
+<h5><a href='https://boards.greenhouse.io/impala/jobs/4497685002'>Job Application for Senior Frontend Engineer at Impala</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -96,7 +100,7 @@
 <p><span class="badge badge-light">San Francisco Boston San Francisco Boston</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/senior-front-end-developer---identity-1526176/?gh_src=82a8057f1'>Senior Front End Developer - Identity | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/senior-front-end-developer---identity-1526176/?gh_src=82a8057f1'>Senior Front End Developer - Identity | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -140,11 +144,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/castlegroup/job/oXGrbfwZ'>Castle Group Careers - Front Desk Attendant or Concierge</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/castlegroup/job/oXGrbfwZ'>Castle Group Careers - Front Desk Attendant or Concierge</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/castlegroup/job/oaGrbfwc'>Castle Group Careers - Front Desk Attendant or Concierge</a></h5> 
+<h5><a href='https://jobs.jobvite.com/castlegroup/job/oaGrbfwc'>Castle Group Careers - Front Desk Attendant or Concierge</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -158,7 +162,7 @@
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698518027-web-front-end-engineer-for-global-sportswear-brand'>Aroghia Group Web Front End Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698518027-web-front-end-engineer-for-global-sportswear-brand'>Aroghia Group Web Front End Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -170,11 +174,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698498944-senior-front-end-engineer'>lm group Senior Front end Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/lmgroup/743999698498944-senior-front-end-engineer'>lm group Senior Front end Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Chiasso, Switzerland</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/callibrity/jobs/4499922002'>Job Application for Software Developer (Front-End / UI) at Callibrity</a></h5> 
+<h5><a href='https://boards.greenhouse.io/callibrity/jobs/4499922002'>Job Application for Software Developer (Front-End / UI) at Callibrity</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -216,7 +220,7 @@
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DataFactory/743999698489548-front-end-engineer-remote'>DataFactory Front End Engineer - Remote | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DataFactory/743999698489548-front-end-engineer-remote'>DataFactory Front End Engineer - Remote | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Washington, DCUnited States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -312,11 +316,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/dental-intelligence-looking-for-front-end-developer/'>Dental Intelligence looking for Front End Developer</a></h5> 
+<h5><a href='https://dedeleads.com/job/dental-intelligence-looking-for-front-end-developer/'>Dental Intelligence looking for Front End Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/stilman-advanced-strategies-looking-for-remote-front-end-developer-angular/'>STILMAN Advanced Strategies looking for Remote Front End Developer, Angular</a></h5> 
+<h5><a href='https://dedeleads.com/job/stilman-advanced-strategies-looking-for-remote-front-end-developer-angular/'>STILMAN Advanced Strategies looking for Remote Front End Developer, Angular</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -328,7 +332,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698456472-web-developer-frontend-ubisoft-club-f-m-d-'>Ubisoft Web Developer Frontend [Ubisoft Club] (f/m/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698456472-web-developer-frontend-ubisoft-club-f-m-d-'>Ubisoft Web Developer Frontend [Ubisoft Club] (f/m/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">D?sseldorf, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -338,7 +342,7 @@
 <p><span class="badge badge-light">Utrecht, Netherlands</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/nobul/bddd8265-866e-4349-a060-76d6064e40a4'>Nobul - Front End Web Developer - React</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/nobul/bddd8265-866e-4349-a060-76d6064e40a4'>Nobul - Front End Web Developer - React</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -382,7 +386,7 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Version1/743999698139575-angular-frontend-developer'>Version 1 Angular Frontend Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Version1/743999698139575-angular-frontend-developer'>Version 1 Angular Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -390,7 +394,7 @@
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://walletservices.recruitee.com/o/front-end-developer-javascriptreact'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://walletservices.recruitee.com/o/front-end-developer-javascriptreact'>
       Front End Developer (Javascript/React) - Wallet.Services
     </a></h5> 
 <p><span class="badge badge-light">Edinburgh, United Kingdom</span></p>
@@ -444,7 +448,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/liferay/job/o82kbfwp'>Liferay, Inc. Careers - Frontend Engineer (client-facing)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/liferay/job/o82kbfwp'>Liferay, Inc. Careers - Frontend Engineer (client-facing)</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -459,10 +463,6 @@ acceleration platform that creates high performance sales teams with?...</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Bey/743999698424753-front-end-developer'>Bey Front End Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Jose, CA</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://masglobalconsulting.applytojob.com/apply/BAY4lOgMbL/Front-End-DeveloperAngularReactHTML5CSS3UXUI'>Front End Developer(Angular/React/HTML5/CSS3,UX/UI) - MAS Global Consulting - Career Page</a></h5> 
-<p><span class="badge badge-light">Tampa, FL Medellin, Colombia</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
